feat: Add recipe and technology to mod

--- a/mod/locale/en/config.cfg
+++ b/mod/locale/en/config.cfg
@@ -1,8 +1,14 @@
+[item-name]
+frpc-sensor=Sensor
+
 [entity-name]
 frpc-sensor=Sensor
 
 [entity-description]
 frpc-sensor=Exposes circuit network values as HTTP metrics.
 
-[item-name]
-frpc-sensor=Sensor
+[technology-name]
+remote-control=Remote Control
+
+[technology-description]
+remote-control=Observe and control the circuit network over RPC.
